--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -58,7 +58,7 @@
         <!-- Thanh menu -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'home'%}">
               Staff
               <img src="{% static 'app/images/logo.png'%}" width="30" height="30" alt="Logo">
             </a>
@@ -69,9 +69,6 @@
             
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Trang chính</a>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'booking'%}" >Quản lý Booking</a>
                 </li>
