--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -13,6 +13,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <style>
+          body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
+        }
           .nav-link:hover {
               background-color: rgb(16, 207, 255); /* Màu nền chuyển sang đỏ khi hover */
               color: white; /* Chữ chuyển sang màu trắng */
