--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -13,8 +13,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color:rgb(255, 255, 255);
-            margin: 0;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
         }
         h1 {
             text-align: center;
