--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -208,7 +208,7 @@
               <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card">
                   <div class="bg-image hover-zoom" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://scontent.fdad3-4.fna.fbcdn.net/v/t39.30808-6/456698590_427827633630500_6122232026928957213_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFHcwrVVsjRO5eHOm0Z03Q1M4ZpRZJbpQ4zhmlFklulDgW6TzTWI_wqnsKKeVF5bvYo2bFybwT-A9U1wcwPX3Y0&_nc_ohc=Xgu9XVWOkEIQ7kNvgF3SU62&_nc_zt=23&_nc_ht=scontent.fdad3-4.fna&_nc_gid=A9ytwNKYaY_2AdH6gKapffV&oh=00_AYCnVxteVWaLhCzwm7YzDQwT7GzIi2RkFjeg74iojbd_vQ&oe=67914817" class="w-100" />
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/475249057_1811398709659785_4337613773793109901_n.png?stp=dst-png_s480x480&_nc_cat=102&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeFXXNEwlU9gNp4md706pzqD_ScSXHafPdv9JxJcdp8923lnQnpdNnAvGyrHFUu7AA49g0nKXM-rQrK_L2d4oRPl&_nc_ohc=FSiqAJvvOVkQ7kNvgHkHR1B&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.xx&oh=03_Q7cD1gGtoeh2OSe8J8NbCdA-XcEsZQ9CGYyZOeZku61UrV8RzA&oe=67C6D21A" class="w-100" />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
@@ -345,19 +345,19 @@
     
         <div class="text-center py-4 align-items-center">
           <p>Follow PetHouse on social media</p>
-          <a href="#" class="btn btn-success" role="button" data-mdb-ripple-init
+          <a href="https://github.com/tuyetluong259/NHOM-4---CNPM" class="btn btn-success" role="button" data-mdb-ripple-init
             rel="nofollow" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
-          <a href="#"  class="btn btn-success" role="button" rel="nofollow" data-mdb-ripple-init
+          <a href="https://github.com/tuyetluong259/NHOM-4---CNPM"  class="btn btn-success" role="button" rel="nofollow" data-mdb-ripple-init
             target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#"  class="btn btn-success"  role="button" rel="nofollow" data-mdb-ripple-init
+          <a href="https://github.com/tuyetluong259/NHOM-4---CNPM"  class="btn btn-success"  role="button" rel="nofollow" data-mdb-ripple-init
             target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#"  class="btn btn-success"  role="button" rel="nofollow" data-mdb-ripple-init
+          <a href="https://github.com/tuyetluong259/NHOM-4---CNPM"  class="btn btn-success"  role="button" rel="nofollow" data-mdb-ripple-init
             target="_blank">
             <i class="fab fa-github"></i>
           </a>
