--- a/project/CNPM/home/static/home/css/home.css
+++ b/project/CNPM/home/static/home/css/home.css
@@ -225,12 +225,12 @@
     transform: scale(1.1);
     cursor: pointer;
   }
-.menu2 {
+.meow {
   display: block;
   text-align: center;
   align-items:center ;
 }
-.menu2 img{
+.meow img{
   width: 70px;
 }
   /*     .menu ul li {
