--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -12,6 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Signup</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 5px;
+        }
         .nav-link:hover {
             background-color: hsl(203, 89.90%, 64.90%); /* Màu nền chuyển sang đỏ khi hover */
             color: white; /* Chữ chuyển sang màu trắng */
@@ -81,8 +87,9 @@
             <!-- Thanh menu -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'login'%}">
-              Login/Signup
+            <a class="navbar-brand" href="{% url 'home'%}">
+                Staff
+                <img src="{% static 'app/images/logo.png'%}" width="30" height="30" alt="Logo">
             </a>
             <!-- Nút Toggle cho mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,9 +98,6 @@
             
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Trang chính</a>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'booking'%}" >Quản lý Booking</a>
                 </li>
