--- a/app/templates/app/schedule.html
+++ b/app/templates/app/schedule.html
@@ -24,7 +24,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
-    padding: 20px;
+    padding: 5px;
 }
 
 header {
@@ -109,13 +109,13 @@ border-radius: 5px;
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/booking/">Quản lý Booking</a>
+                        <a class="nav-link " href="/booking/">Quản lý Booking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'pet'%}">Quản lý Thú cưng</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'schedule'%}">Sắp lịch bác sĩ</a>
+                        <a class="nav-link active" href="{% url 'schedule'%}">Sắp lịch bác sĩ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'room'%}">Quản lý Chuồng</a>
