--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -155,7 +155,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -184,7 +184,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -213,7 +213,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -242,7 +242,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -277,7 +277,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -306,7 +306,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -335,7 +335,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -364,7 +364,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -399,7 +399,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -428,7 +428,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -457,7 +457,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -486,7 +486,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -522,7 +522,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -551,7 +551,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -580,7 +580,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -609,7 +609,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -644,7 +644,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -673,7 +673,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -702,7 +702,7 @@
                         </p>
                         <div class="mt-4">
                           <button class="btn btn-success add-to-cart">
-                            Mua ngay
+                            Thêm vào giỏ hàng
                           </button>
                         </div>
                       </div>
@@ -711,44 +711,69 @@
                 </div>
               </div>
             </section>
-            <section class="cart">
-              <form action="">
-                <table>
-                  <thead>
-                    <tr>
-                      <th>san pham</th>
-                      <th>gia</th>
-                      <th>so luong</th>
-                      <th>xoa</th>
-                    </tr>
-                  </thead>
-                </table>
+            <section class="cart container mt-5">
+              <h2 class="text-center fw-bold">Cart</h2>
+
+              <table class="table table-bordered text-center align-middle">
+                <thead class="table-light">
+                  <tr>
+                    <th>Sản phẩm</th>
+                    <th>Giá</th>
+                    <th>SL</th>
+                    <th>Chọn</th>
+                  </tr>
+                </thead>
                 <tbody>
-                  <tr> 
-                    <div class="meow">
-
-                    <td>
+                  <tr>
+                    <td
+                      class="d-flex align-items-center justify-content-center"
+                    >
                       <img
-                        src="{% static 'home/images/thucan1.webp' %}"
-                        alt=""
+                        src="{% static 'home/images/thucan17.webp' %}"
+                        class="me-2"
+                        width="100"
                       />
-                      thucann1
+                      thức ăn mèo
                     </td>
+                    <td><span>230.000</span> <sup>đ</sup></td>
                     <td>
-                      <p>
-                        <span class="product-price" data-price="100000"
-                          >100.000</span
-                        >
-                        <sup>đ</sup>
-                      </p>
+                      <input
+                        type="number"
+                        value="1"
+                        min="1"
+                        class="form-control w-50 mx-auto"
+                      />
                     </td>
-                    <td><input type="number" value="1" min="0" /></td>
-                    <td>xoa'</td>
-                  </tr> 
-                </div>
-
+                    <td class="text-danger" style="cursor: pointer">Xóa</td>
+                  </tr>
+                  <tr>
+                    <td
+                      class="d-flex align-items-center justify-content-center"
+                    >
+                      <img
+                        src="{% static 'home/images/thucan14.webp' %}"
+                        class="me-2"
+                        width="100"
+                      />
+                      thức ăn mèo
+                    </td>
+                    <td><span>330.000 </span><sup>đ</sup></td>
+                    <td>
+                      <input
+                        type="number"
+                        value="1"
+                        min="1"
+                        class="form-control w-50 mx-auto"
+                      />
+                    </td>
+                    <td class="text-danger" style="cursor: pointer">Xóa</td>
+                  </tr>
                 </tbody>
-              </form>
+              </table>
+
+              <div class="text-end fw-bold">
+                Tổng tiền: <span>0</span><sup>đ</sup>
+              </div>
             </section>
           </div>
         </div>
@@ -795,7 +820,6 @@
           </div>
         </div>
       </footer>
-      <script src="js/tta.js"></script>
     </div>
   </body>
 </html>
