--- a/project/CNPM/home/static/home/css/thucan.css
+++ b/project/CNPM/home/static/home/css/thucan.css
@@ -125,3 +125,11 @@
   min-height: 200px;
   position: relative;
 }
+.flex-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.flex-row img{
+  width: 70px;
+}
